added mapping with all tables related with proejcts